--- a/package.json
+++ b/package.json
@@ -2,11 +2,6 @@
   "name": "react-xkcd",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
-  },
   "scripts": {
     "start": "craco start",
     "build": "craco build",
@@ -28,14 +23,21 @@
       "last 1 safari version"
     ]
   },
+	"dependencies": {
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0"
+	},
   "devDependencies": {
-    "@craco/craco": "^5.5.0",
-    "babel-plugin-import": "^1.12.2",
-    "craco-alias": "^1.0.4",
+		"@craco/craco": "^5.5.0",
+		"babel-plugin-import": "^1.12.2",
+		"craco-alias": "^1.0.4",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-import": "^0.13.0",
     "eslint-plugin-react": "^7.16.0",
     "less": "^3.10.3",
-    "less-loader": "^5.0.0"
+    "less-loader": "^5.0.0",
+		"prop-types": "^15.7.2"
   }
 }
