--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-xkcd",
   "version": "0.1.0",
   "private": true,
+	"license": "UNLICENSED",
   "scripts": {
     "start": "craco start",
     "build": "craco build",
