--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-xkcd",
-  "version": "0.1.0",
+  "name": "xkcd-comics",
+  "version": "0.1.1",
   "private": true,
 	"license": "UNLICENSED",
   "scripts": {
