--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "xkcd-comics",
   "version": "0.1.1",
   "private": true,
-	"license": "UNLICENSED",
+  "license": "UNLICENSED",
   "scripts": {
     "start": "craco start",
     "build": "craco build",
@@ -25,6 +25,7 @@
     ]
   },
   "dependencies": {
+    "antd": "^3.24.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
