--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-import": "^0.13.0",
     "eslint-plugin-react": "^7.16.0",
+    "jest": "^24.9.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "react-test-renderer": "^16.10.2"
   }
 }
