--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "craco start",
     "build": "craco build",
-    "test": "craco test --env=jsdom --no-watchman",
+    "test": "craco test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint.js src/"
   },
