Fixed eslint version conflict with the one from react-scripts

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "redux": "^4.0.4",
     "redux-mock-store": "^1.5.3",
     "redux-saga": "^1.1.1"
@@ -46,19 +46,18 @@
     "babel-plugin-import": "^1.12.2",
     "babel-preset-react": "^6.24.1",
     "craco-alias": "^1.0.4",
-    "eslint": "^7.4.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-import": "^0.13.0",
-    "eslint-plugin-jest": "^22.20.0",
-    "eslint-plugin-react": "^7.16.0",
-    "jest": "^24.9.0",
-    "less": "^3.10.3",
-    "less-loader": "^5.0.0",
-    "pre-commit": "^1.2.2",
-    "prop-types": "^15.7.2",
-    "react-test-renderer": "^16.10.2",
-    "redux-devtools": "^3.5.0",
-    "redux-saga-test-plan": "^4.0.0-rc.3"
+		"eslint-config-airbnb": "^18.0.1",
+		"eslint-config-import": "^0.13.0",
+		"eslint-plugin-jest": "^22.20.0",
+		"eslint-plugin-react": "^7.16.0",
+		"jest": "^24.9.0",
+		"less": "^3.10.3",
+		"less-loader": "^5.0.0",
+		"pre-commit": "^1.2.2",
+		"prop-types": "^15.7.2",
+		"react-test-renderer": "^16.10.2",
+		"redux-devtools": "^3.5.0",
+		"redux-saga-test-plan": "^4.0.0-rc.3"
   },
   "jest": {
     "transform": {
