--- a/package.json
+++ b/package.json
@@ -29,35 +29,38 @@
     ]
   },
   "dependencies": {
-    "antd": "^3.24.1",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-redux": "^7.1.1",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.3",
-    "redux": "^4.0.4",
-    "redux-mock-store": "^1.5.3",
-    "redux-saga": "^1.1.1"
+    "@ant-design/icons": "^4.7.0",
+    "antd": "^4.18.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "^5.0.0",
+    "redux": "^4.1.2",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
-    "@craco/craco": "^5.5.0",
+    "@craco/craco": "^6.4.3",
+    "@types/react-dom": "^17.0.11",
+    "@types/redux-mock-store": "^1.0.3",
     "babel-core": "^6.26.3",
-    "babel-jest": "^24.9.0",
-    "babel-plugin-import": "^1.12.2",
+    "babel-jest": "^27.4.6",
+    "babel-plugin-import": "^1.13.3",
     "babel-preset-react": "^6.24.1",
-    "craco-alias": "^1.0.4",
-    "eslint-config-airbnb": "^18.0.1",
+    "craco-alias": "^3.0.1",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-import": "^0.13.0",
-    "eslint-plugin-jest": "^22.20.0",
-    "eslint-plugin-react": "^7.16.0",
-    "jest": "^24.9.0",
-    "less": "^3.10.3",
-    "less-loader": "^5.0.0",
+    "eslint-plugin-jest": "^25.7.0",
+    "eslint-plugin-react": "^7.28.0",
+    "jest": "^27.4.6",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
     "pre-commit": "^1.2.2",
-    "prop-types": "^15.7.2",
-    "react-test-renderer": "^16.10.2",
+    "prop-types": "^15.8.1",
+    "react-test-renderer": "^17.0.2",
     "redux-devtools": "^3.5.0",
-    "redux-saga-test-plan": "^4.0.0-rc.3"
+    "redux-mock-store": "^1.5.4",
+    "redux-saga-test-plan": "^4.0.4"
   },
   "jest": {
     "transform": {
